--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -50,37 +50,37 @@
 	     	android:layout_marginLeft="1dp">
 			
 		    <TableRow android:layout_weight="1.0">
-		        <Button style="@style/KeypadButton.Dark"
+		        <Button style="@style/KeypadButton"
 			            android:id="@+id/button1"
 			            android:text="@string/number1" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button2"
 			            android:text="@string/number2" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button3"
 			            android:text="@string/number3" />
 			</TableRow>
 			
 		    <TableRow android:layout_weight="1.0">
-		        <Button style="@style/KeypadButton.Dark"
+		        <Button style="@style/KeypadButton"
 			            android:id="@+id/button4"
 			            android:text="@string/number4" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button5"
 			            android:text="@string/number5" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button6"
 			            android:text="@string/number6" />
 			</TableRow>
 			
 		    <TableRow android:layout_weight="1.0">
-		        <Button style="@style/KeypadButton.Dark"
+		        <Button style="@style/KeypadButton"
 			            android:id="@+id/button7"
 			            android:text="@string/number7" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button8"
 			            android:text="@string/number8" />
-				<Button style="@style/KeypadButton.Dark"
+				<Button style="@style/KeypadButton"
 			            android:id="@+id/button9"
 			            android:text="@string/number9" />
 			</TableRow>   
@@ -92,18 +92,18 @@
 			android:orientation="horizontal"
 			android:layout_weight="0.15">
 	
-		    <RadioButton style="@style/RadioButton.Dark"
+		    <RadioButton style="@style/RadioButton"
 		        android:id="@+id/button_pen"
 		        android:button="@drawable/button_pen"
 		        android:layout_height="fill_parent"
 		    	android:layout_weight="1"
 		    	android:checked="true"/>
-		    <RadioButton style="@style/RadioButton.Dark"
+		    <RadioButton style="@style/RadioButton"
 		        android:id="@+id/button_pencil"
 		        android:button="@drawable/button_pencil"
 		        android:layout_height="fill_parent"
 		    	android:layout_weight="1"/>
-		    <RadioButton style="@style/RadioButton.Dark"
+		    <RadioButton style="@style/RadioButton"
 		        android:id="@+id/button_eraser"
 		        android:button="@drawable/button_eraser"
 		        android:layout_height="fill_parent"
