--- a/res/layout/activity_savegame.xml
+++ b/res/layout/activity_savegame.xml
@@ -5,7 +5,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".SaveGameList" >
+    android:background="#FFe7e7e7"
+    tools:context=".SaveGameListActivity" >
 
     <Button android:id="@+id/savebutton"
 	        android:layout_width="wrap_content"
@@ -17,5 +18,17 @@
     <LinearLayout android:layout_width="fill_parent"
 				  android:layout_height="1dp"
 				  android:background="#555"/>
-
+    
+	<ListView android:id="@android:id/list"
+	          android:layout_width="fill_parent"
+	          android:layout_height="0dp"
+	          android:layout_weight="1"/>
+	
+	<TextView android:id="@android:id/empty"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:gravity="center_horizontal"
+	    android:padding="10dp"
+	    android:text="@string/save_games_empty"
+	    android:textColor="#555"/>
 </LinearLayout>
