--- a/res/xml/activity_settings.xml
+++ b/res/xml/activity_settings.xml
@@ -56,7 +56,7 @@
 		<CheckBoxPreference
 			android:key="showfullscreen"
 			android:title="@string/setting_show_fullscreen_title"
-			android:defaultValue="true" />
+			android:defaultValue="false" />
 		<CheckBoxPreference
 			android:key="keepscreenon"
 			android:title="@string/setting_keep_screen_on_title"
