--- a/res/drawable/radio_button.xml
+++ b/res/drawable/radio_button.xml
@@ -7,7 +7,7 @@
             <solid android:color="#a8dff4"/>
             <stroke
                 android:width="2dp"
-                android:color="#b4d5f0" />    
+                android:color="#ccb4d5f0" />    
         </shape>
      </item>
      
@@ -25,7 +25,7 @@
             <solid android:color="#33B5E5"/>
         	<stroke
                 android:width="2dp"
-                android:color="#b4d5f0" />
+                android:color="#ccb4d5f0" />  
         </shape>
     </item>
     <item android:state_checked="false">
