--- a/res/layout-sw480dp-land/activity_main.xml
+++ b/res/layout-sw480dp-land/activity_main.xml
@@ -21,16 +21,27 @@
 		<RelativeLayout
 		    android:id="@+id/titlecontainer"
 		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:padding="2dp"
-			android:background="@drawable/menu_button">
-	   
+		    android:layout_height="45dp"
+		    android:paddingLeft="8dp"
+		    android:paddingRight="8dp"
+		    android:background="@drawable/menu_button"
+		    tools:context=".MainActivity">
+	    
+			<ImageView android:id="@+id/appicon"
+			    	   android:contentDescription="@string/app_name"
+			    	   android:layout_width="36dp"
+			    	   android:layout_height="36dp"
+			    	   android:layout_centerVertical="true"
+			    	   android:src="@drawable/ic_launcher"
+			           android:layout_alignParentLeft="true"/>
+			
 		    <TextView style="@style/TitleBar.Large"
-		        	  android:id="@+id/appname"
-		              android:text="@string/app_name"
-		              android:textStyle="bold"
-					  android:layout_alignParentLeft="true"/>
-		    <TextView style="@style/TitleBar.Large"
+			          android:id="@+id/appname"
+			          android:text="@string/app_name"
+			          android:textStyle="bold"
+			          android:layout_toRightOf="@id/appicon"
+		    	      android:paddingLeft="4dp"/>
+		    <TextView style="@style/TitleBar"
 		        	  android:id="@+id/playtime"
 		              android:text="@string/time_zero"
 					  android:layout_alignParentRight="true"/>
@@ -109,7 +120,7 @@
 		
 	    <LinearLayout android:id="@+id/actionBar"
 	       	android:layout_width="fill_parent" 
-	    	android:layout_height="38dp"
+	    	android:layout_height="45dp"
 			android:orientation="horizontal">
 		
 		    <ImageButton style="@style/MenuButton"
@@ -117,12 +128,12 @@
 		        		 android:src="@drawable/menu_new_icon"
 		        		 android:layout_weight="1"/>
 		    <ImageButton style="@style/MenuButton"
-		        		 android:id="@+id/icon_replay"
-		        		 android:src="@drawable/menu_replay_icon"
-		        		 android:layout_weight="1"/>
-		    <ImageButton style="@style/MenuButton"
 		        		 android:id="@+id/icon_hint"
 		        		 android:src="@drawable/menu_hint_icon"
+		        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_undo"
+		        		 android:src="@drawable/menu_undo_icon"
 		        		 android:layout_weight="1"/>
 		    <ImageButton style="@style/MenuButton"
 		        		 android:id="@+id/icon_overflow"
