--- a/res/layout-sw480dp/activity_main.xml
+++ b/res/layout-sw480dp/activity_main.xml
@@ -10,18 +10,26 @@
 	<RelativeLayout
 	    android:id="@+id/titlecontainer"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingTop="2dp"
-	    android:paddingLeft="3dp"
-	    android:paddingRight="3dp"
+	    android:layout_height="45dp"
+	    android:paddingLeft="10dp"
+	    android:paddingRight="10dp"
 	    android:background="@drawable/menu_button"
 	    tools:context=".MainActivity">
-    
-	    <TextView style="@style/TitleBar"
-	        	  android:id="@+id/appname"
-	              android:text="@string/app_name"
-	              android:textStyle="bold"
-				  android:layout_alignParentLeft="true"/>
+    		<ImageView android:id="@+id/appicon"
+		    	   android:contentDescription="@string/app_name"
+		    	   android:layout_width="36dp"
+		    	   android:layout_height="36dp"
+		    	   android:layout_centerVertical="true"
+		    	   android:src="@drawable/ic_launcher"
+		           android:layout_alignParentLeft="true"/>
+		
+	    <TextView style="@style/TitleBar.Large"
+		          android:id="@+id/appname"
+		          android:text="@string/app_name"
+		          android:textStyle="bold"
+		          android:layout_toRightOf="@+id/appicon"
+	    	      android:paddingLeft="4dp"/>
+
 	    <TextView style="@style/TitleBar"
 	        	  android:id="@+id/playtime"
 	              android:text="@string/time_zero"
@@ -108,7 +116,7 @@
 	</LinearLayout>
 	
 	<LinearLayout android:id="@+id/actionBar"
-    		     android:layout_height="38dp"
+    		     android:layout_height="45dp"
     		     android:layout_width="fill_parent"
 			     android:orientation="horizontal"
 			     android:paddingTop="2dp"
@@ -119,12 +127,12 @@
 		        		 android:src="@drawable/menu_new_icon"
 		        		 android:layout_weight="1"/>
 		    <ImageButton style="@style/MenuButton"
-		        		 android:id="@+id/icon_replay"
-		        		 android:src="@drawable/menu_replay_icon"
-		        		 android:layout_weight="1"/>
-		    <ImageButton style="@style/MenuButton"
 		        		 android:id="@+id/icon_hint"
 		        		 android:src="@drawable/menu_hint_icon"
+		        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_undo"
+		        		 android:src="@drawable/menu_undo_icon"
 		        		 android:layout_weight="1"/>
 		    <ImageButton style="@style/MenuButton"
 		        		 android:id="@+id/icon_overflow"
