--- a/res/layout/activity_savegame.xml
+++ b/res/layout/activity_savegame.xml
@@ -7,13 +7,25 @@
     android:orientation="vertical"
     android:background="#FFf3efe7"
     tools:context=".SaveGameListActivity" >
-
-    <Button android:id="@+id/savebutton"
+    
+    <LinearLayout 
+        	android:id="@+id/buttoncontainer"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center"
-	        android:layout_margin="15dp"
-	        android:text="@string/save_current_game" />
+		    android:layout_margin="15dp"
+	        android:gravity="center" >
+	        
+	    <Button android:id="@+id/savebutton"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/save_current_game" />    
+		<ImageButton android:id="@+id/discardbutton"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/button_discard_light"/>
+		"
+    </LinearLayout>
    
     <LinearLayout android:layout_width="fill_parent"
 				  android:layout_height="1dp"
