--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -2,19 +2,15 @@
     <item android:id="@+id/menu_new"
         android:title="@string/menu_new"
         android:orderInCategory="1"/>
-    <!--item android:id="@+id/calculator"
-        android:title="@string/menu_calculator"
-        android:orderInCategory="3"
-        android:icon="@drawable/menu_calculator_icon"/-->
+    <item android:id="@+id/menu_restart_game"
+        android:title="@string/menu_restart_game"
+        android:orderInCategory="2"/>
     <item android:id="@+id/menu_save"
         android:title="@string/menu_save"
         android:orderInCategory="3"/>    
     <item android:id="@+id/menu_share"
         android:title="@string/menu_share"
         android:orderInCategory="4"/>
-    <!--item android:id="@+id/menu_stats"
-        android:title="@string/menu_stats"
-        android:orderInCategory="5"/-->
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"/>
